Сделать оставшиеся вкладки у кладовщика и формы добавления, изменена ER-диаграмма

--- a/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
+++ b/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddApplications.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddApplications.Designer.cs">
+      <DependentUpon>AddApplications.cs</DependentUpon>
+    </Compile>
     <Compile Include="Inj.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +72,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AddApplications.resx">
+      <DependentUpon>AddApplications.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Inj.resx">
       <DependentUpon>Inj.cs</DependentUpon>
     </EmbeddedResource>
