--- a/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
+++ b/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
@@ -58,6 +58,12 @@
     <Compile Include="AddMoving.Designer.cs">
       <DependentUpon>AddMoving.cs</DependentUpon>
     </Compile>
+    <Compile Include="DefAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DefAdd.Designer.cs">
+      <DependentUpon>DefAdd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Inj.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AddMoving.resx">
       <DependentUpon>AddMoving.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DefAdd.resx">
+      <DependentUpon>DefAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Inj.resx">
       <DependentUpon>Inj.cs</DependentUpon>
