Подключена база у меня (+fix)

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@
 ################################################################################
 
 *.vsidx
-App.config
+/Система учёта и приобретения инструмента/App.config
