Реализовать класс поиска(фильтрации)(простой). Добавить поиск во вкладку Постащики.

--- a/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
+++ b/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
@@ -61,6 +61,7 @@
     <Compile Include="AddMoving.Designer.cs">
       <DependentUpon>AddMoving.cs</DependentUpon>
     </Compile>
+    <Compile Include="Search.cs" />
     <Compile Include="DefAdd.cs">
       <SubType>Form</SubType>
     </Compile>
