--- a/Система учёта и приобретения инструмента/App.config
+++ b/Система учёта и приобретения инструмента/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="Система_учёта_и_приобретения_инструмента.Properties.Settings.TOOLACCOUNTINGConnectionString"
-            connectionString="Data Source=(local);Initial Catalog=TOOLACCOUNTING;Integrated Security=True;TrustServerCertificate=True"
+            connectionString="Data Source=DESKTOP-2HRM1C8\SQLEXPRESS;Initial Catalog=TOOLACCOUNTING;Integrated Security=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
