Добавить ещё какие-то файлы в игнор

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 *.vsidx
 .vs/
 /Система учёта и приобретения инструмента/App.config
+/Система учёта и приобретения инструмента/.vs/Система учёта и приобретения инструмента/v17/.suo
+/Система учёта и приобретения инструмента/.vs/Система учёта и приобретения инструмента/v17/DocumentLayout.json
