--- a/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
+++ b/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
@@ -65,6 +65,12 @@
     <Compile Include="AddMoving.Designer.cs">
       <DependentUpon>AddMoving.cs</DependentUpon>
     </Compile>
+    <Compile Include="AnalogForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AnalogForm.Designer.cs">
+      <DependentUpon>AnalogForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Excel.cs" />
     <Compile Include="ImportForm.cs">
       <SubType>Form</SubType>
@@ -132,6 +138,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AddMoving.resx">
       <DependentUpon>AddMoving.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AnalogForm.resx">
+      <DependentUpon>AnalogForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DefAdd.resx">
       <DependentUpon>DefAdd.cs</DependentUpon>
