Добавить app.config в .gitignore?

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /Система учёта и приобретения инструмента/App.config
 /Система учёта и приобретения инструмента/.vs/Система учёта и приобретения инструмента/v17/.suo
 /Система учёта и приобретения инструмента/.vs/Система учёта и приобретения инструмента/v17/DocumentLayout.json
+/Система учёта и приобретения инструмента/App.config
