Очистка поиска на номенклатуре

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /Система учёта и приобретения инструмента/.vs/Система учёта и приобретения инструмента/v17/.suo
 /Система учёта и приобретения инструмента/.vs/Система учёта и приобретения инструмента/v17/DocumentLayout.json
 /Система учёта и приобретения инструмента/App.config
+/Система учёта и приобретения инструмента/.vs/Система учёта и приобретения инструмента/CopilotIndices/17.13.430.18484/CodeChunks.db
+/Система учёта и приобретения инструмента/.vs/Система учёта и приобретения инструмента/CopilotIndices/17.13.430.18484/SemanticSymbols.db
+/Система учёта и приобретения инструмента/.vs/Система учёта и приобретения инструмента/CopilotIndices/17.13.430.18484/SemanticSymbols.db
