--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /Система учёта и приобретения инструмента/.vs/Система учёта и приобретения инструмента/CopilotIndices/17.13.430.18484/CodeChunks.db
 /Система учёта и приобретения инструмента/.vs/Система учёта и приобретения инструмента/CopilotIndices/17.13.430.18484/SemanticSymbols.db
 /Система учёта и приобретения инструмента/.vs/Система учёта и приобретения инструмента/CopilotIndices/17.13.430.18484/SemanticSymbols.db
+/Система учёта и приобретения инструмента/Properties/Settings.settings
+/Система учёта и приобретения инструмента/Properties/Settings.Designer.cs
