--- a/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
+++ b/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
@@ -118,6 +118,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StorageForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StorageForm.Designer.cs">
+      <DependentUpon>StorageForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SupForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -179,6 +185,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="StorageForm.resx">
+      <DependentUpon>StorageForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SupForm.resx">
       <DependentUpon>SupForm.cs</DependentUpon>
     </EmbeddedResource>
