--- a/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
+++ b/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
@@ -79,6 +79,12 @@
       <DependentUpon>ImportForm.cs</DependentUpon>
     </Compile>
     <Compile Include="NotificationService.cs" />
+    <Compile Include="RequestConsideration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RequestConsideration.Designer.cs">
+      <DependentUpon>RequestConsideration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Search.cs" />
     <Compile Include="DefAdd.cs">
       <SubType>Form</SubType>
@@ -185,6 +191,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RequestConsideration.resx">
+      <DependentUpon>RequestConsideration.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="StorageForm.resx">
       <DependentUpon>StorageForm.cs</DependentUpon>
     </EmbeddedResource>
