--- a/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
+++ b/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
@@ -71,6 +71,12 @@
     <Compile Include="AnalogForm.Designer.cs">
       <DependentUpon>AnalogForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="DeleviryListForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DeleviryListForm.Designer.cs">
+      <DependentUpon>DeleviryListForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Excel.cs" />
     <Compile Include="ImportForm.cs">
       <SubType>Form</SubType>
@@ -168,6 +174,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DefAdd.resx">
       <DependentUpon>DefAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DeleviryListForm.resx">
+      <DependentUpon>DeleviryListForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GroupForm.resx">
       <DependentUpon>GroupForm.cs</DependentUpon>
