--- a/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
+++ b/Система учёта и приобретения инструмента/Система учёта и приобретения инструмента.csproj
@@ -245,6 +245,9 @@
       <SubType>Designer</SubType>
       <LastGenOutput>TOOLACCOUNTINGDataSet5.Designer.cs</LastGenOutput>
     </None>
+    <None Include="TOOLACCOUNTINGDataSet.xss">
+      <DependentUpon>TOOLACCOUNTINGDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
